Fixed Firefox gap (my bad), and nav bar scroll regression.

--- a/src/views/Joseki/Joseki.styl
+++ b/src/views/Joseki/Joseki.styl
@@ -65,6 +65,7 @@
         @media screen and (max-width: 800px) {
             height: 100vw;
             min-height: 100vw;  // firefox needs this
+            max-height: 100vw;  // firefox needs this
             flex-basis: 99%;
         }
     }
